# SofaPython

./: CMakeLists.txt  README.md
Common/: CMakeLists.txt  Common.h  Macros.h
